Fix double scroll bars when height <= 375px

--- a/src/global.css
+++ b/src/global.css
@@ -25,6 +25,7 @@ body {
 	background: #000;
 	color: #fff;
 	margin: 0;
+	padding: 0;
 	padding: 8px;
 	box-sizing: border-box;
 	font-family: 'GlacialIndifference-Bold', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
